# Game-projects-2021

./: Button.xcf
Documents/: Ade and Aki SDL.docx  Creative Assembly.docx  How forward declarations work.docx  Portfolio website.docx  When must you use a member initializer list.docx  ~$ba Technical design doc Updated (1) - Copy.docx  ~$eative Assembly.docx  ~$ths for programming.docx  ~$w forward declarations work.docx  ~WRL1193.tmp
GLProject1/: CMakeLists.txt
GLProject1/ArtificialDataTypes/: Constants.h
GLProject1/Initializations/: GLUTCallbacks.cpp  HelloGL.cpp  HelloGL.h
GLProject1pt2/: CMakeLists.txt
GLProject1pt2/ArtificialDataTypes/: Structs.h
GLProject1pt2/Draw2DShapes/: Draw2D.h
GLProject1pt2/Initializations/: HelloGL.cpp  HelloGL.h
GLSDLPROJECT/: CMakeLists.txt  main.cpp
GLSDLProject1pt2/: Actor.cpp  Actor.h  CMakeLists.txt  Character.cpp  Character.h  GameObject.cpp  GameObject.h  main.cpp
GLSDLProject1pt2/DataTypes/: Collider.cpp  Collider.h  Component.cpp  Component.h  Constants.h  Structs.h  Vector2.h  Vector3.h
GLSDLProject1pt2/Engine/: Engine.cpp  Engine.h  Timer.cpp  Timer.h
GLSDLProject1pt2/InputManager/: InputManager.cpp  InputManager.h
PhysicsEngine/PhysicsEngine/: Actor.h  Application.cpp  Component.cpp  Component.h  Game.cpp  Game.h  Maths.h  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  TransformComponent.cpp  TransformComponent.h
PhysicsEngine/PhysicsEngine/Debug/: PhysicsEngine.exe.recipe  PhysicsEngine.ilk  vc142.idb  vc143.idb
PhysicsEngineOpengl/: PhysicsEngine.sln
PhysicsEngineOpengl/PhysicsEngine/: Actor.cpp  Actor.h  Application.cpp  Basic.frag  Basic.vert  CircleColliderComponent.cpp  CircleColliderComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  Maths.cpp  Maths.h  Physics.cpp  Physics.h  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  RepeatedIncludes.h  Shader.cpp  Shader.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  Texture.cpp  Texture.h  TransformComponent.cpp  TransformComponent.h  VertexArray.cpp  VertexArray.h
PhysicsEngineOpengl/PhysicsEngine/Debug/: PhysicsEngine.exe.recipe  PhysicsEngine.ilk  vc142.idb  vc143.idb
PhysicsEngineOpengl/PhysicsEngine/Shaders/: Basic.vert  Sprite.frag  (+2 more)
Summer game projects/: CMakeLists.txt
Summer game projects/ArtificialDataTypes/: Camera.h  Structs.h  Vector3.h
Summer game projects/Draw2DShapes/: Draw2D.cpp
Summer game projects/Initializations/: GLUTCallbacks.h  HelloGL.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
test/Engine/: Engine.cpp  Engine.h  Timer.h
(+24 files in other folders)
